--- a/index.html
+++ b/index.html
@@ -2,50 +2,12 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>ReUse-Česko – Official</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f3f3f3;
-      text-align: center;
-    }
-    header {
-      background: #2a8c4a;
-      color: white;
-      padding: 30px 10px;
-    }
-    .box {
-      background: white;
-      margin: 20px auto;
-      padding: 20px;
-      max-width: 600px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #0002;
-    }
-  </style>
+  <title>ReUse Česko</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>ReUse-Česko</h1>
-    <p>Oficiální web aplikace</p>
-  </header>
-
-  <div class="box">
-    <h2>Co je ReUse-Česko?</h2>
-    <p>Aplikace zaměřená na znovupoužití věcí, ekologii a sdílení.</p>
-  </div>
-
-  <div class="box">
-    <h2>Ke stažení</h2>
-    <p>Aplikace bude brzy dostupná ke stažení.</p>
-  </div>
-
-  <div class="box">
-    <h2>Kontakt</h2>
-    <p>Email: reuse-cz@support.com</p>
-  </div>
-
-</body>
-</html>
+  <!-- App content injected from original document -->
+  <div id="app-root">Aplikace bude zde – vlož původní HTML obsah.</div>
+<script src="app.js"></script>
+</body></html>
